--- a/position practice/styles/main.css
+++ b/position practice/styles/main.css
@@ -3,7 +3,7 @@ nav{
 	position:fixed;
 	height:50px;
 	width:100%;
-	background-color:blue;
+	background-color:orange;
 	margin:0px;
 }
 p{
@@ -20,4 +20,29 @@ body{
 	background-image:url("../images/back.jpg");
 	background-repeat:repeat;
 	background-size:300px;
+}
+main{
+	position: relative;
+	height: 400px;
+	width: 800px;
+	background-color:white;
+	margin:auto;
+	top:150px;
+}
+img{
+	height:200px;
+	width:200px;
+	position:absolute;
+}
+.left200{
+	left:200px;
+}
+.left400{
+	left:400px;
+}
+.left600{
+	left:600px;
+}
+.bottom{
+	top:200px;
 }
